--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>wallop-backend</groupId>
   <artifactId>backend-test</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <dependencies>
       <dependency>
           <groupId>org.junit.jupiter</groupId>
@@ -24,6 +24,18 @@
         <version>3.8.1</version>
         <configuration>
           <release>11</release>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>com.lmb.wallapop.MarsRover</mainClass>
+            </manifest>
+          </archive>
         </configuration>
       </plugin>
       <plugin>
